RESOLVED FIXED104254
Speech Recognition API: Change the error code to a string on SpeechRecognitionError
https://bugs.webkit.org/show_bug.cgi?id=104254
Summary Speech Recognition API: Change the error code to a string on SpeechRecognitio...
Tommy Widenflycht
Reported 2012-12-06 05:20:45 PST
Speech Recognition API: Change the error code to a string on SpeechRecognitionError
Attachments
Patch (22.48 KB, patch)
2012-12-06 05:26 PST, Tommy Widenflycht
no flags
Patch (28.74 KB, patch)
2012-12-06 07:56 PST, Tommy Widenflycht
no flags
Tommy Widenflycht
Comment 1 2012-12-06 05:26:58 PST
Tommy Widenflycht
Comment 2 2012-12-06 07:56:36 PST
Adam Barth
Comment 3 2012-12-06 08:52:50 PST
Comment on attachment 178014 [details] Patch Great!
WebKit Review Bot
Comment 4 2012-12-06 09:00:55 PST
Comment on attachment 178014 [details] Patch Clearing flags on attachment: 178014 Committed r136846: <http://trac.webkit.org/changeset/136846>
WebKit Review Bot
Comment 5 2012-12-06 09:00:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.