Speech Recognition API: Change the error code to a string on SpeechRecognitionError https://bugs.webkit.org/show_bug.cgi?id=104254

Reviewed by Adam Barth.

Source/WebCore:

SpeechRecognitionError::code (numeric value) has been changed to SpeechRecognitionError::error (string)
in the latest specification.

http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html#speechreco-error

Existing tests modified to cover this patch.

* Modules/speech/SpeechRecognitionError.cpp:
(WebCore::ErrorCodeToString):
(WebCore):
(WebCore::SpeechRecognitionError::create):
(WebCore::SpeechRecognitionError::SpeechRecognitionError):
* Modules/speech/SpeechRecognitionError.h:
(SpeechRecognitionErrorInit):
(WebCore::SpeechRecognitionError::error):
(SpeechRecognitionError):
* Modules/speech/SpeechRecognitionError.idl:

Source/WebKit/chromium:

Minor WebCore type changes.

* src/AssertMatchingEnums.cpp:
* src/SpeechRecognitionClientProxy.cpp:
(WebKit::SpeechRecognitionClientProxy::didReceiveError):

Tools:

Changes the mock error function to take a string instead of an int.

* DumpRenderTree/chromium/DRTTestRunner.cpp:
(DRTTestRunner::setMockSpeechRecognitionError):
* DumpRenderTree/chromium/MockWebSpeechRecognizer.cpp:
(WebTestRunner::ErrorTask::ErrorTask):
(MockWebSpeechRecognizer::setError):
* DumpRenderTree/chromium/MockWebSpeechRecognizer.h:
(MockWebSpeechRecognizer):

LayoutTests:

Adjusting tests.

* fast/events/constructors/speech-recognition-error-constructor-expected.txt:
* fast/events/constructors/speech-recognition-error-constructor.html:
* fast/speech/scripted/speechrecognition-errors-expected.txt:
* fast/speech/scripted/speechrecognition-errors.html:
* fast/speech/scripted/speechrecognitionerror-basics-expected.txt:
* fast/speech/scripted/speechrecognitionerror-basics.html:
* platform/chromium/fast/events/constructors/speech-recognition-error-constructor-expected.txt:


Canonical link: https://commits.webkit.org/122423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136846 268f45cc-cd09-0410-ab3c-d52691b4dbfc